# private-cloud

./: .gitignore  .travis.yml  README.md  appveyor.yml  appveyour.yml  private-cloud.cabal  stack.yaml
app/: Main.hs  Options.hs
src/PrivateCloud/: Action.hs  AmazonWebServices.hs  Aws.hs  AwsMonad.hs  CloudProvider.hs  Crypto.hs  DirTree.hs  Exception.hs  FileInfo.hs  FileWatch.hs  LocalDb.hs  Monad.hs  ServiceConfig.hs  Sync.hs
src/PrivateCloud/Aws/: Account.hs  Cleanup.hs  Logging.hs  Monad.hs  Provider.hs  S3.hs  SimpleDb.hs  Util.hs
src/PrivateCloud/Cloud/: Action.hs  Crypto.hs  DirTree.hs  EventLog.hs  Exception.hs  LocalDb.hs  Monad.hs  Sync.hs
src/PrivateCloud/Provider/: Class.hs  FileInfo.hs  Types.hs
src/Sodium/: Error.hs  FFI.hsc  Hash.hs  Init.hs  Memory.hs
test/: Arbitrary.hs  CloudTests.hs  Provider.hs  SodiumTests.hs  Spec.hs
