name:                private-cloud
version:             0.1.0.0
synopsis:            Personal file cloud
description:         Personal file cloud backed by Amazon Web Services
homepage:            https://github.com/rblaze/private-cloud#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Andrey Sverdlichenko
maintainer:          blaze@ruddy.ru
copyright:           2016 Andrey Sverdlichenko
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PrivateCloud.Aws
                       PrivateCloud.Aws.Cleanup
                       PrivateCloud.Aws.S3
                       PrivateCloud.Aws.SimpleDb
                       PrivateCloud.Crypto
                       PrivateCloud.DirTree
                       PrivateCloud.FileInfo
                       PrivateCloud.LocalDb
                       PrivateCloud.Sync
  ghc-options:         -W -Wall
  build-depends:       base >= 4.7 && < 5
                     , async
                     , aws
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , cryptonite
                     , directory-tree
                     , filepath
                     , hslogger
                     , http-client
                     , http-client-tls
                     , memory
                     , resourcet
                     , safe-exceptions
                     , sqlite-simple
                     , text
                     , time
                     , transformers
                     , unix
                     , unordered-containers
  default-language:    Haskell2010

executable private-cloud-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Wall
  build-depends:       base
                     , bytestring
                     , cmdargs
                     , directory
                     , filepath
                     , hslogger
                     , private-cloud
                     , safe-exceptions
                     , unix
  default-language:    Haskell2010
  other-modules:       Options
                       Paths_private_cloud

test-suite private-cloud-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , directory
                     , directory-tree
                     , filepath
                     , memory
                     , private-cloud
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , temporary
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rblaze/private-cloud
