name:                private-cloud
version:             0.1.0.0
synopsis:            Personal file cloud
description:         Personal file cloud backed by Amazon Web Services
homepage:            https://github.com/rblaze/private-cloud#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Andrey Sverdlichenko
maintainer:          blaze@ruddy.ru
copyright:           2017 Andrey Sverdlichenko
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PrivateCloud.Action
                       PrivateCloud.AmazonWebServices
                       PrivateCloud.Aws
                       PrivateCloud.Aws.Account
                       PrivateCloud.Aws.Cleanup
                       PrivateCloud.Aws.S3
                       PrivateCloud.Aws.SimpleDb
                       PrivateCloud.CloudProvider
                       PrivateCloud.Crypto
                       PrivateCloud.DirTree
                       PrivateCloud.FileInfo
                       PrivateCloud.LocalDb
                       PrivateCloud.ServiceConfig
                       PrivateCloud.Sync
  ghc-options:         -W -Wall
  build-depends:       base >= 4.7 && < 5
                     , Glob
                     , aws >= 0.16
                     , amazonka
                     , amazonka-iam
                     , amazonka-s3
                     , amazonka-sdb
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , cryptonite
                     , cryptonite-conduit >= 0.2
                     , directory
                     , directory-tree
                     , filepath
                     , hashable
                     , hslogger
                     , http-client
                     , http-client-tls
                     , lens
                     , memory
                     , resourcet
                     , safe-exceptions
                     , sqlite-simple
                     , text
                     , text-format
                     , time
                     , transformers
                     , unordered-containers
  if os(windows)
    cpp-options:       -DWINBUILD
    build-depends:     Win32
  else
    build-depends:     unix
  default-language:    Haskell2010

executable private-cloud-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Wall
  build-depends:       base
                     , Glob
                     , amazonka
                     , bytestring
                     , cmdargs
                     , credential-store
                     , directory
                     , filepath
                     , haskeline
                     , hslogger
                     , memory
                     , private-cloud
                     , random
                     , safe-exceptions
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
  other-modules:       Options
                       Paths_private_cloud

test-suite private-cloud-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Glob
                     , bytestring
                     , directory
                     , directory-tree
                     , filepath
                     , memory
                     , private-cloud
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , temporary
                     , text
  if os(windows)
    cpp-options:       -DWINBUILD
  else
    build-depends:     unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rblaze/private-cloud
